2005-08-14  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-08-12  Juan Manuel Mouriz <jmouriz@gmail.com>

	* providers/postgres/utils.c (gda_postgres_sqlstate_to_gda_code): new
	function.
	(gda_postgres_make_error): convert SQLstate to GDA error code.

2005-08-11  Dan Winship  <danw@novell.com>

	* configure.in: add checks for mono/gtk-sharp
	(AC_OUTPUT): add gda-sharp stuff

	* Makefile.am (SUBDIRS): add gda-sharp

	* gda-sharp/*: C# bindings for libgda, migrated from gtk-sharp.
	They compile, but probably don't work (just like the ones formerly
	in gtk-sharp. Hopefully they'll be maintained better here.)

	* libgda/gda-blob.h: Fix some problems noticed by the gapi
	parser... this type doesn't work at all, does it?

2005-08-10  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.3.91.

2005-08-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-client.c (gda_client_create_database,
	gda_client_drop_database): added missing return statement.

2005-08-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/xml/gda-xml-provider.c (add_type_row): use
	gda_value_new_gdatype, not gda_value_new_type.

2005-08-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config,[ch]: added missing argument list.

2006-08-07  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.3.90.

2005-08-06  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: make sure the postgres installation used is the one
	passed using the --with-postgres if that argument has been used.
	* providers/sqlite/sqlite-src/: updated to version 3.2.2 of SQLite
	* libgda/gda-connection-event.[ch]: changed the signature of the
	gda_connection_event_new() to include event type
	* libgda/gda-client.[ch]: the "error" signal now only passes the
	actual GdaConnectionEvent which represents the error as argument
	* libgda/gda-client.c: bug fixed when a conection could not be opened
	* libgda/gda-connection.|ch]: added a GError** argument to the
	gda_connection_new() function