@@ -57,19 +57,6 @@ dnl ******************************
 AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
 
 dnl ******************************
-dnl Scrollkeeper
-dnl ******************************
-AC_PATH_PROG(SCROLLKEEPER_CONFIG, scrollkeeper-config,no)
-if test x$SCROLLKEEPER_CONFIG = xno; then
-	AC_MSG_WARN(Could not find scrollkeeper-config -- please install the scrollkeeper package)
-else
-	SCROLLKEEPER_LOCALSTATE_DIR=`scrollkeeper-config --pkglocalstatedir`
-	AC_SUBST(SCROLLKEEPER_LOCALSTATE_DIR)
-fi
-
-AM_CONDITIONAL(HAVE_SCROLLKEEPER, test x$SCROLLKEEPER_CONFIG != xno)
-
-dnl ******************************
 dnl Translations
 dnl ******************************
 GETTEXT_PACKAGE=libgda-3
@@ -1009,7 +996,6 @@ gda-sharp/gda-sharp-2.0.pc
 gda-sharp/AssemblyInfo.cs
 testing/Makefile
 doc/Makefile
-doc/libgda-C.omf
 doc/C/Makefile
 data/Makefile
 stamp.h
