@@ -1,27 +1,1 @@
 SUBDIRS = C #es pt_BR
-
-if HAVE_SCROLLKEEPER
-
-omf_dest_dir=$(datadir)/omf/libgda
-scrollkeeper_localstate_dir = $(SCROLLKEEPER_LOCALSTATE_DIR)
-
-install-data-local:
-	$(mkinstalldirs) $(DESTDIR)$(omf_dest_dir)
-	-for file in $(srcdir)/*.omf; do                        \
-		$(INSTALL_DATA) $$file $(DESTDIR)$(omf_dest_dir); \
-	done
-	-scrollkeeper-update -p $(scrollkeeper_localstate_dir)
-
-uninstall-local:
-	-for file in $(srcdir)/*.omf; do                        \
-		basefile=`basename $$file`;                     \
-		rm -f $(omf_dest_dir)/$$basefile;               \
-	done
-	-rmdir $(omf_dest_dir)
-	-scrollkeeper-update -p $(scrollkeeper_localstate_dir)
-
-endif
-
-EXTRA_DIST = \
-	NAMESPACE \
-	libgda-C.omf.in
