@@ -1,24 +1,0 @@
-<?xml version="1.0" standalone="no"?>
-<!DOCTYPE omf PUBLIC "-//OMF//DTD Scrollkeeper OMF Variant V1.0//EN" "http://scrollkeeper.sourceforge.net/dtds/scrollkeeper-omf-1.0/scrollkeeper-omf.dtd">
-<omf> 
-  <resource>
-    <creator>
-      Rodrigo Moya
-    </creator>
-    <title>
-      libgda (GNOME/GNU Data Access) Manual
-    </title>
-    <date>August 2002</date>
-    <subject category="GNOME|Development"/>
-    <description>
-      Complete manual for the use of libgda tools and programs,
-      as well as for the complete API.
-    </description>
-    <type>user's guide</type>
-    <format mime="text/html"/>
-    <identifier url="file:@prefix@/share/gtk-doc/html/libgda/index.html"/>
-    <language code="C"/>
-    <relation seriesid="ebe4f574-a94d-11d6-8bc3-bd1f202a92f8"/>
-    <rights type="GNU FDL" license.version="1.1"/>
-  </resource>
-</omf>
